...
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/coverflow_icon_tint" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fragment_cover_flow_grid"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipChildren="false"
        android:clipToPadding="false"
        app:layout_constraintBottom_toTopOf="@id/fragment_cover_flow_date_download_wrapper"
        app:layout_constraintEnd_toEndOf="parent"
...
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1,1"
            app:layout_constraintStart_toEndOf="@id/fragment_cover_flow_date"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/fragment_coverflow_moment_download"
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:importantForAccessibility="no"
                android:padding="4dp"
                android:src="@drawable/ic_file_download"
                android:visibility="gone"
...
