<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.taz.app.android.ui.WelcomeActivity">

    <WebView
        android:id="@+id/web_view_fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ImageButton
        android:id="@+id/button_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|end"
        android:background="@null"
        android:contentDescription="@string/button_close_text"
        android:padding="@dimen/ic_close_button_padding"
        android:src="@drawable/ic_close" />

    <include
        android:id="@+id/welcome_loading_screen"
        layout="@layout/include_loading_screen" />
</FrameLayout>
